--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
    <head>
+   <!--De code hieronder zorgt voor alle opmaak zoals de achtergrond,borders,ect-->
    <link rel="stylesheet" href=opmaak.css></link>
+   <!--title zorgt voor de titel die je in de browser ziet-->
 <title>SanJ Hoofdpagina</title>
    </head> 
-   <link rel="icon" type="image/x-icon" href="Logo2.png">
+   <!--De code hieronder zorgt voor de favicon die je op de browser ziet-->
+   <link rel="icon" type="image/x-icon" href="Logo3.png">
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
  <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
