--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
    </head> 
    <!--De code hieronder zorgt voor de favicon die je op de browser ziet-->
    <link rel="icon" type="image/x-icon" href="Logo3.png">
-<body>
-<ul>
+   <!--Body is de inhoud van het document-->
+   <body>
+   <!--ul zorgt ervoor dat de links in de navigatiebar terechtkomen-->   
+   <ul>
    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
+   <!--li is wat in een van de blokken/links moet staan-->
+   <!--a is het attribuut wat aan de links wordt gegeven-->
+   <!--href is voor de link naar de pagina's-->
    <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="hobby.html">Hobby's</a></li>
    <li><a align="right" href="vrienden.html">Vrienden</a></li>
@@ -23,10 +28,12 @@
    <br>
    </li>
  </ul>
+ <!--h1 is hoe groot de tekst is, style de kleur en align is voor dat de tekst in het midden staat-->
 <h1 style="color: red;" align="center">SANJAY</h1>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
 </style>
 </style>
+<!--div is een soort container en class zorgt ervoor dat je een specefieke container kan bewerken in de css code.-->
 <div class="school">
 <center>
 <div class="school">
