--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
    <!--li is wat in een van de blokken/links moet staan-->
    <!--a is het attribuut wat aan de links wordt gegeven-->
-   <!--href is voor de link naar de pagina's-->
+   <!--href is voor de link naar de andere pagina's-->
    <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="hobby.html">Hobby's</a></li>
    <li><a align="right" href="vrienden.html">Vrienden</a></li>
@@ -28,13 +28,14 @@
    <br>
    </li>
  </ul>
- <!--h1 is hoe groot de tekst is, style de kleur en align is voor dat de tekst in het midden staat-->
+ <!--h1 is hoe groot de tekst is, style is de kleur en align is voor dat de tekst in het midden staat-->
 <h1 style="color: red;" align="center">SANJAY</h1>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
 </style>
 </style>
 <!--div is een soort container en class zorgt ervoor dat je een specefieke container kan bewerken in de css code.-->
 <div class="school">
+<!--center zorgt ervoor dat de tekst en de links in het midden staan van de pagina-->
 <center>
 <div class="school">
    <h1 style="color: red;">dit is mijn school</h1>
