--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
 <center> 
- <h1>Binair stelsel</h1>
+ <h1 style="color: red;">Binair stelsel</h1>
  <h3 align="center" style="color: white;">Het binair stelsel bestaat uit nullen en eenen (0 & 1). Elk getal noemen we een bit, 8 bits vormt een byte.</h3>
  <img src="Binairstelsel.png" align="center" alt="binair stelsel werking" style="width:400px;height:200px;">
  <h2 align="center">ASCII</h2>
