--- a/index.html
+++ b/index.html
@@ -23,17 +23,20 @@
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
       <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
-     <marquee direction="right" behaviour="scroll"></marquee></li>
+     <marquee direction="right" behaviour="scroll"></marquee>
+   <br>
+   <br>
+   </li>
  </ul>
  <!--h1 is hoe groot de tekst is, style is de kleur en align is voor dat de tekst in het midden staat-->
-<center>
- <h1 style="color: red;" align="center">SANJAY</h1>
+<h1 style="color: red;" align="center">SANJAY</h1>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
 </style>
 </style>
 <!--div is een soort container en class zorgt ervoor dat je een specefieke container kan bewerken in de css code.-->
 <div class="school">
 <!--center zorgt ervoor dat de tekst en de links in het midden staan van de pagina-->
+<center>
 <div class="school">
    <h1 style="color: red;">dit is mijn school</h1>
   <a href="https://www.vlietlandcollege.nl/Home"> <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;"> </a>
