--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
-     <marquee direction="right" behaviour="scroll"></marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+     <marquee direction="right" behaviour="scroll"></marquee></li>
    <br>
    <br>
-   </li>
  </ul>
  <!--h1 is hoe groot de tekst is, style is de kleur en align is voor dat de tekst in het midden staat-->
 <h1 style="color: red;" align="center">SANJAY</h1>
