--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
  <h1 style="color: red;" align="center">SANJAY</h1>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
 </center>
+</style>
+</style>
 <!--div is een soort container en class zorgt ervoor dat je een specefieke container kan bewerken in de css code.-->
 <div class="school">
 <!--center zorgt ervoor dat de tekst en de links in het midden staan van de pagina-->
