--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
  </ul>
  <!--h1 is hoe groot de tekst is, style is de kleur en align is voor dat de tekst in het midden staat-->
 <center>
- <h1 style="color: red;" >SANJAY</h1>
+ <h1 style="color: red;">SANJAY</h1></style>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
 </center>
-</style>
+
 </style>
 <!--div is een soort container en class zorgt ervoor dat je een specefieke container kan bewerken in de css code.-->
 <div class="school">
