--- a/page2.html
+++ b/page2.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Mijn hobby's</title>
-</head>
+   <head>
+      <meta charset="UTF-8" />
+      <title>Mijn hobby's</title>
+  </head>
 <link rel="icon" type="image/x-icon" href="Logo3.png">
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
