--- a/hobby.html
+++ b/hobby.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Over mij</title>
+    <title>Hobby's</title>
 </head>
 <link rel="icon" type="image/x-icon" href="Logo3.png">
 <body>
