--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
  <br>
  <br>
  <center>
-   <h1 style="color: red;  margin-top: 50px; position: relative;">SANJAY</h1></style>
+   <h1 style="color: red;  margin-top: 50px; position: relative;">Over mij</h1></style>
   <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
   </style>
   </center>
