--- a/hobby.html
+++ b/hobby.html
@@ -20,6 +20,10 @@
  <br>
  <br>
  <br>
+ <center>
+   <h1 style="color: red;  margin-top: 50px; position: relative;">Hobby's</h1></style>
+  </style>
+  </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
  <div class="sport">
  <center>
