--- a/Kleur.html
+++ b/Kleur.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kleurmoddelen</title>
+  <title>Kleurmodellen</title>
 </head>
 <link rel="icon" type="image/x-icon" href="Logo3.png">
 <body>
@@ -17,6 +17,7 @@
     <li><a align="right" href="hobby.html">Hobby's</a></li>
     <li><a align="right" href="vrienden.html">Vrienden</a></li>
     <li><a align="right" href="game.html">Binairstelsel</a></li>
+    <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
     <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
     <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
@@ -25,7 +26,7 @@
   </style>
   </style>
   <div class="kleurrood">
-    <h1 align="center">Kleurmoddelen</h1>
+    <h1 align="center">Kleurmodellen</h1>
   </div>
   <div class="roodtekst1">
     <h3 align="center" style="color:rgb(0, 0, 0);">Een manier om een kleur numeriek te beschrijven wordt een kleurmodel
@@ -33,7 +34,7 @@
   </div>
   <div class="roodtekst2">
     <h3 align="center" style="color:rgb(0, 0, 0);">Bij RGB is het zo dat de drie primaire kleuren rood, blauw en groen
-      een additief kleursysteem vormen. Dit model wordt gebruikt om door het gebruik van een code kleuren vast te
+      een kleursysteem vormen. Dit model wordt gebruikt om door het gebruik van een code kleuren vast te
       leggen. De kleuren rood, groen en blauw zijn de kleurcomponenten en zwart is de basiskleur.</h3>
   </div>
   <br>
