--- a/game.html
+++ b/game.html
@@ -16,7 +16,8 @@
    <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="hobby.html">Hobby's</a></li>
    <li><a align="right" href="vrienden.html">Vrienden</a></li>
-   <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
+   <li><a align="right" href="game.html">Binair Stelsel</a></li>
+   <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
       <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
