--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <!--li is wat in een van de blokken/links moet staan-->
    <!--a is het attribuut wat aan de links wordt gegeven-->
    <!--href is voor de link naar de andere pagina's-->
+   <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
    <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="hobby.html">Hobby's</a></li>
    <li><a align="right" href="vrienden.html">Vrienden</a></li>
