--- a/page2.html
+++ b/page2.html
@@ -10,6 +10,7 @@
 <ul>
    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
    <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
+   <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="hobby.html">Hobby's</a></li>
    <li><a align="right" href="vrienden.html">Vrienden</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
