--- a/vrienden.html
+++ b/vrienden.html
@@ -11,6 +11,7 @@
    <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
    <li><a align="right" href="hobby.html">Hobby's</a></li>
    <li><a align="right" href="page2.html">Over mij</a></li>
+   <li><a align="right" href="vrienden.html">Vrienden</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
     </li>
