--- a/vrienden.html
+++ b/vrienden.html
@@ -13,7 +13,7 @@
    <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="vrienden.html">Vrienden</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
-   <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
+   <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
     </li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
       <marquee style="color:rgb(255, 0, 0);">Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
