--- a/hobby.html
+++ b/hobby.html
@@ -15,7 +15,7 @@
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.6</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
  <br>
