--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!--center zorgt ervoor dat de tekst en de links in het midden staan van de pagina-->
 <center>
 <div class="school">
-   <h1 style="color: red;">vlietland College</h1>
+   <h1 style="color: red;">Vlietland College</h1>
   <a href="https://www.vlietlandcollege.nl/Home"> <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;"> </a>
    <br>
 </center>
