--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--html geeft het begin van de code aan-->
 <html>
    <head>
    <!--De code hieronder zorgt voor alle opmaak zoals de achtergrond,borders,ect-->
@@ -55,4 +56,5 @@
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt op school. Ik heb deze site gemaakt voor een opdracht voor het vak informatica en vond het zelf super leuk om deze site te maken.</h2>
 </div>
 </body>
+<!--/html is het einde van de code-->
 </html>
