--- a/compressie.html
+++ b/compressie.html
@@ -23,6 +23,7 @@
    <li><a align="right" href="vrienden.html">Vrienden</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
+   <li><a align="right" href="compressie.html">compressie</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
       <marquee style="color:rgb(255, 0, 0);">Versie 4.5, dit is om die nieuwste changes te checken.</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
