--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <center>
  <h1 style="color: red;  margin-top: 50px; position: relative;">SANJAY</h1></style>
 <!--h3 is een kleiner lettertype dan h2.-->
- <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
+ <h3 align="center" style="color:whitesmoke;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
 </style>
 </center>
 <!--div is een soort container en class zorgt ervoor dat je een specefieke container kan maken en bewerken in de css code.-->
