--- a/compressie.html
+++ b/compressie.html
@@ -33,6 +33,8 @@
    <br>
    <br>
  </ul>
+ <h3 align="center" style="color:whitesmoke;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
+</style>
 </body>
 <!--/html is het einde van de code-->
 </html>
