--- a/compressie.html
+++ b/compressie.html
@@ -25,7 +25,7 @@
    <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
    <li><a align="right" href="compressie.html">Compressie</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.6, dit is om die nieuwste changes te checken.</marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.4, dit is om die nieuwste changes te checken.</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
    <!--br zorgt voor een spatie tussen de code..-->
    <br>
@@ -33,8 +33,12 @@
    <br>
    <br>
  </ul>
- <h3 align="center" style="color:whitesmoke;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
-</style>
+ <center>
+    <h1 style="color: red;  margin-top: 50px; position: relative;">SANJAY</h1></style>
+   <!--h3 is een kleiner lettertype dan h2.-->
+    <h3 align="center" style="color:whitesmoke;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
+   </style>
+   </center>
 </body>
 <!--/html is het einde van de code-->
 </html>
