--- a/compressie.html
+++ b/compressie.html
@@ -5,7 +5,7 @@
    <!--De code hieronder zorgt voor alle opmaak zoals de achtergrond,borders,ect-->
    <link rel="stylesheet" href=opmaak.css></link>
    <!--title zorgt voor de titel die je in de browser ziet-->
-<title>SanJ Hoofdpagina</title>
+<title>Compressie</title>
    </head> 
    <!--De code hieronder zorgt voor de favicon die je op de browser ziet-->
    <link rel="icon" type="image/x-icon" href="Logo3.png">
