--- a/compressie.html
+++ b/compressie.html
@@ -25,7 +25,7 @@
    <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
    <li><a align="right" href="compressie.html">Compressie</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.5, dit is om die nieuwste changes te checken.</marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.6, dit is om die nieuwste changes te checken.</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
    <!--br zorgt voor een spatie tussen de code..-->
    <br>
@@ -35,9 +35,9 @@
  </ul>
  <!--h1 is hoe groot de tekst is, style is de kleur en align is voor dat de tekst in het midden staat-->
 <center>
- <h1 style="color: red;  margin-top: 50px; position: relative;">SANJAY</h1></style>
+ <h1 style="color: red;  margin-top: 50px; position: relative;">Compressie</h1></style>
 <!--h3 is een kleiner lettertype dan h2.-->
- <h3 align="center" style="color:whitesmoke;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
+ <h3 align="center" style="color:whitesmoke;">Deze pagina is nog in onderhoud</h3>
 </style>
 </center>
 </body>
