--- a/Kleur.html
+++ b/Kleur.html
@@ -19,7 +19,9 @@
     <li><a align="right" href="game.html">Binairstelsel</a></li>
     <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
     <li><a align="right" href="compressie.html">Compressie</a></li>
-    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
+    <li><a align="right" href="bitmap.html">Bitmap- en vectorafbeeldingen</a></li>
+    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bov
+      enin het scherm-->
       <marquee style="color:rgb(255, 0, 0);">Versie 4.5, dit is om die nieuwste changes te checken.</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
