--- a/bitmap.html
+++ b/bitmap.html
@@ -36,7 +36,7 @@
  </ul>
  <!--h1 is hoe groot de tekst is, style is de kleur en align is voor dat de tekst in het midden staat-->
 <center>
- <h1 style="color: red;  margin-top: 50px; position: relative;">Compressie</h1></style>
+ <h1 style="color: red;  margin-top: 50px; position: relative;">Bitmap- en vectorafbeeldingen</h1></style>
 <!--h3 is een kleiner lettertype dan h2.-->
  <h3 align="center" style="color:whitesmoke;">Deze pagina is nog in onderhoud</h3>
 </style>
