--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
    <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
    <li><a align="right" href="compressie.html">Compressie</a></li>
    <li><a align="right" href="bitmap.html">Bitmap- en vectorafbeeldingen</a></li>
+   <li><a align="right" href="alegemeen.html">Algemene informatie</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
       <marquee style="color:rgb(255, 0, 0);">Versie 4.5, dit is om die nieuwste changes te checken.</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
