--- a/alegemeen.html
+++ b/alegemeen.html
@@ -25,7 +25,7 @@
  <br>
  <br>
  <center>
-   <h1 style="color: red;  margin-top: 50px; position: relative;">Hobby's</h1></style>
+   <h1 style="color: red;  margin-top: 50px; position: relative;">Algemene informatie</h1></style>
   </style>
   </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
