--- a/alegemeen.html
+++ b/alegemeen.html
@@ -25,27 +25,19 @@
  <br>
  <br>
  <center>
-   <h1 style="color: red;  margin-top: 50px; position: relative;">Algemene informatie</h1></style>
+   <h1 style="color: red;  margin-top: 50px; position: relative;">input</h1></style>
   </style>
   </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
  <div class="sport">
  <center>
  <div class="sport">
-    <h1 style="color: orange;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik vroeger overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
-    <img class="img_deg" src="ramdas.jpeg" alt="school" style="width:400px;height:300px;">
+    <h1 style="color: orange;">Wanneer je op een toets drukt ontvangt de compter ongtvangt informatie. Manieren waarop de computer input kan krijgen zijn bijvoorbeeld:met de muis, toetsenboord, touchscreen en webcam.</h1>
  </center>
  </div>
  </div>
  <br>
  <br>
- <div class="PS4">
-   <center>
-   <div class="PS4">
-      <h1 style="color: rgb(0, 0, 255);">Naast sporten hou ik ook van gamen. Ik game vaak met vrienden doordeweeks en in het weekend en heb dan veel lol.</h1>
-      <img class="img_deg" src="PS4.jpg" alt="PS4 Pro" style="width:500px;height:300px;">
-   </center>
-   </div>
-   </div>
+
 </body>
 </html>
