--- a/Kleur.html
+++ b/Kleur.html
@@ -16,7 +16,7 @@
     <li><a align="right" href="page2.html">Over mij</a></li>
     <li><a align="right" href="hobby.html">Hobby's</a></li>
     <li><a align="right" href="vrienden.html">Vrienden</a></li>
-    <li><a align="right" href="game.html">Binairstelsel</a></li>
+    <li><a align="right" href="game.html">Binair Stelsel</a></li>
     <li><a align="right" href="Kleur.html">Kleurmodellen</a></li>
     <li><a align="right" href="compressie.html">Compressie</a></li>
     <li><a align="right" href="bitmap.html">Bitmap- en vectorafbeeldingen</a></li>
