--- a/algemeen.html
+++ b/algemeen.html
@@ -18,7 +18,7 @@
    <li><a align="right" href="bitmap.html">Bitmap- en vectorafbeeldingen</a></li>
    <li><a align="right" href="algemeen.html">Algemene informatie</a></li>
    <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.5, dit is om die nieuwste changes te checken.</marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.5, dit is om die nieuwste veranderingen te checken.</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
  <br>
@@ -29,10 +29,10 @@
   </style>
   </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
- <div class="sport">
+ <div class="input">
  <center>
- <div class="sport">
-    <h1 style="color: orange;">Wanneer je op een toets drukt ontvangt de compter ongtvangt informatie. Manieren waarop de computer input kan krijgen zijn bijvoorbeeld:met de muis, toetsenboord, touchscreen en webcam.</h1>
+ <div class="input">
+    <h1 style="color: orange;">Wanneer je op een toets drukt ontvangt de computer informatie. Manieren waarop de computer input kan krijgen zijn bijvoorbeeld:met de muis, toetsenboord, touchscreen, controller en webcam.</h1>
  </center>
  </div>
  </div>
