--- a/algemeen.html
+++ b/algemeen.html
@@ -38,6 +38,20 @@
  </div>
  <br>
  <br>
-
+ <center>
+   <h1 style="color: red;  margin-top: 50px; position: relative;">verwerking</h1></style>
+  </style>
+  </center>
+ <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
+ <div class="input">
+ <center>
+ <div class="input">
+    <h1 style="color: orange;">De computer verwerkt de informatie die die heeft gekregen. Proces bestaat uit 3 elementen: Uitvoerbare code(de code moet wel kloppen), Data(de computer heeft informatie nodig om mee te werken.) en uitvoeringscontext.
+   </h1>
+ </center>
+ </div>
+ </div>
+ <br>
+ <br>
 </body>
 </html>
