--- a/algemeen.html
+++ b/algemeen.html
@@ -25,7 +25,7 @@
  <br>
  <br>
  <center>
-   <h1 style="color: red;  margin-top: 50px; position: relative;">input</h1></style>
+   <h1 style="color: red;  margin-top: 50px; position: relative;">Invoer</h1></style>
   </style>
   </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
@@ -39,15 +39,43 @@
  <br>
  <br>
  <center>
-   <h1 style="color: red;  margin-top: 50px; position: relative;">verwerking</h1></style>
+   <h1 style="color: red;  margin-top: 50px; position: relative;">Verwerking</h1></style>
   </style>
   </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
  <div class="input">
  <center>
  <div class="input">
-    <h1 style="color: orange;">De computer verwerkt de informatie die die heeft gekregen. Proces bestaat uit 3 elementen: Uitvoerbare code(de code moet wel kloppen), Data(de computer heeft informatie nodig om mee te werken.) en uitvoeringscontext.
+    <h1 style="color: orange;">De computer verwerkt de informatie die die heeft gekregen. Verwerking bestaat uit 3 dele: Uitvoerbare code(de code moet wel kloppen), Data(de computer heeft deze informatie nodig om er mee te kunnen werken.) en uitvoeringscontext(wat er uiteindelijk gebeurt).
    </h1>
+ </center>
+ </div>
+ </div>
+ <br>
+ <br>
+ <center>
+   <h1 style="color: red;  margin-top: 50px; position: relative;">Opslag</h1></style>
+  </style>
+  </center>
+ <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
+ <div class="input">
+ <center>
+ <div class="input">
+    <h1 style="color: orange;">Na het verwerken van de code slaat de computer de gekregen informatie op en onthoud de computer deze informatie voor de output</h1>
+ </center>
+ </div>
+ </div>
+ <br>
+ <br>
+ <center>
+   <h1 style="color: red;  margin-top: 50px; position: relative;">Uitvoer</h1></style>
+  </style>
+  </center>
+ <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
+ <div class="input">
+ <center>
+ <div class="input">
+    <h1 style="color: orange;">De computer laat de verwerkte informatie wat in de opslag staat zien op het scherm. Het hoeft niet alleen te zijn dat het op het scherm komt te staan, maar het kan ook zijn bij speakers of grafische rekenmachines.</h1>
  </center>
  </div>
  </div>
