--- a/Kleur.html
+++ b/Kleur.html
@@ -23,7 +23,7 @@
     <li><a align="right" href="algemeen.html">Algemene informatie</a></li>
     <li><!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bov
       enin het scherm-->
-      <marquee style="color:rgb(255, 0, 0);">Versie 4.5, dit is om die nieuwste changes te checken.</marquee>
+      <marquee style="color:rgb(255, 0, 0);">Versie 4.5, dit is om die nieuwste veranderingen te checken.</marquee>
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
   <style type="text/css">
