--- a/algemeen.html
+++ b/algemeen.html
@@ -25,7 +25,7 @@
  <br>
  <br>
  <center>
-   <h1 style="color: red;  margin-top: 50px; position: relative;">Invoer</h1></style>
+   <h1 style="color: white;  margin-top: 50px; position: relative;">Invoer</h1></style>
   </style>
   </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
@@ -39,7 +39,7 @@
  <br>
  <br>
  <center>
-   <h1 style="color: red;  margin-top: 50px; position: relative;">Verwerking</h1></style>
+   <h1 style="color: white;  margin-top: 50px; position: relative;">Verwerking</h1></style>
   </style>
   </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
@@ -54,7 +54,7 @@
  <br>
  <br>
  <center>
-   <h1 style="color: red;  margin-top: 50px; position: relative;">Opslag</h1></style>
+   <h1 style="color: white;  margin-top: 50px; position: relative;">Opslag</h1></style>
   </style>
   </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
@@ -68,7 +68,7 @@
  <br>
  <br>
  <center>
-   <h1 style="color: red;  margin-top: 50px; position: relative;">Uitvoer</h1></style>
+   <h1 style="color: white;  margin-top: 50px; position: relative;">Uitvoer</h1></style>
   </style>
   </center>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
