--- a/compressie.html
+++ b/compressie.html
@@ -39,9 +39,46 @@
 <center>
  <h1 style="color: red;  margin-top: 50px; position: relative;">Compressie</h1></style>
 <!--h3 is een kleiner lettertype dan h2.-->
- <h3 align="center" style="color:whitesmoke;">Deze pagina is nog in onderhoud</h3>
+ <h3 align="center" style="color:whitesmoke;">Met compressie kun je bestanden zoals foto's en video's verkleinen. Er zijn 2 verschillende soorten compressies.</h3>
 </style>
 </center>
+<br>
+<br>
+<center>
+   <h1 style="color: white;  margin-top: 50px; position: relative;">Lossy compression</h1></style>
+  </style>
+  </center>
+ <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
+ <div class="input">
+ <center>
+ <div class="input">
+    <h1 style="color: blue;">In Lossy compression zit het woord lossy. Hiermee wordt bedoeld dat informatie uit het orginele bestand aangepaste en/of verwijdert wordt, zodat bijvoorbeeld de grootte van het bestand bijvoorbeeld groter wordt. Ook worden er bijvoorbeeld verschillende kleurtinten gebruikt in een foto. Door het gebruik van Lossy compression gaat de kwaliteit wel omlaag, wat soms best goed merkbaar is. Een veelgebruikte Lossy compression methode is JPEG, wat wordt afgekort door JPG. </h1>
+ </center>
+ </div>
+ </div>
+ <br>
+ <br>
+ <center>
+   <h1 style="color: white;  margin-top: 50px; position: relative;">Lossless compression</h1></style>
+  </style>
+  </center>
+ <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
+ <div class="input">
+ <center>
+ <div class="input">
+    <h1 style="color: blue;">In Lossless compression zit het woord Lossless, wat letterlijk kostenloos betekent. Dus in tegenstelling tot Lossy compression, verlies je bij Lossless compression geen kwaliteit. Ook wordt er geen informatie verwijdert. Nog een verschil is dat bij Lossless compression het bestand altijd kan worden omgezet naar het orgineel, bij Lossy compressies kan dat niet omdat di informatie is weggegooid.. </h1>
+ </center>
+ </div>
+ </div>
+ <br>
+ <br>
+ <center>
+   <div class="sport">
+      <h1 style="color: orange;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik vroeger overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
+      <img class="img_deg" src="compressie.png" alt="compressie voorbeeld" style="width:400px;height:300px;">
+   </center>
+   </div>
+   </div>
 </body>
 <!--/html is het einde van de code-->
 </html>
