--- a/compressie.html
+++ b/compressie.html
@@ -74,7 +74,7 @@
  <br>
  <center>
    <div class="compressie">
-      <h1 style="color: orange;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik vroeger overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
+      <h1 style="color: blue;">Een voorbeeld van Lossy compression en Lossless compression</h1>
       <img class="img_deg" src="compressie.png" alt="compressie voorbeeld" style="width:400px;height:300px;">
    </center>
    </div>
