--- a/algemeen.html
+++ b/algemeen.html
@@ -81,5 +81,12 @@
  </div>
  <br>
  <br>
+ <center>
+   <div class="compressie">
+      <h1 style="color: blue;">De werking van alles wat boven is uitgelegd in 1 afbeelding.</h1>
+      <img class="img_deg" src="Algemeen.png" alt="compressie voorbeeld" style="width:500px;height:300px;">
+   </center>
+   </div>
+   </div>
 </body>
 </html>
