--- a/algemeen.html
+++ b/algemeen.html
@@ -82,8 +82,8 @@
  <br>
  <br>
  <center>
-   <div class="compressie">
-      <h1 style="color: blue;">De werking van alles wat boven is uitgelegd in 1 afbeelding.</h1>
+   <div class="input">
+      <h1 style="color: orange;">De werking van alles wat boven is uitgelegd in 1 afbeelding.</h1>
       <img class="img_deg" src="Algemeen.png" alt="compressie voorbeeld" style="width:500px;height:300px;">
    </center>
    </div>
