--- a/compressie.html
+++ b/compressie.html
@@ -74,7 +74,7 @@
  <br>
  <center>
    <div class="compressie">
-      <h1 style="color: blue;">Een voorbeeld van Lossy compression en Lossless compression</h1>
+      <h1 style="color: blue;">Een voorbeeld van het verschil tussen Lossy compression en Lossless compression met een waterdruppel als voorbeeld.</h1>
       <img class="img_deg" src="compressie.png" alt="compressie voorbeeld" style="width:500px;height:300px;">
    </center>
    </div>
