--- a/algemeen.html
+++ b/algemeen.html
@@ -83,7 +83,7 @@
  <br>
  <center>
    <div class="input">
-      <h1 style="color: orange;">De werking van alles wat boven is uitgelegd in 1 afbeelding.</h1>
+      <h1 style="color: orange;">De werking van alles wat boven is uitgelegd in deze afbeelding. Hier kun je zien dat de invoer wordt verwerkt, opgeslagen en uitgevoerd.</h1>
       <img class="img_deg" src="Algemeen.png" alt="compressie voorbeeld" style="width:500px;height:300px;">
    </center>
    </div>
