--- a/bitmap.html
+++ b/bitmap.html
@@ -37,11 +37,13 @@
  </ul>
  <!--h1 is hoe groot de tekst is, style is de kleur en align is voor dat de tekst in het midden staat-->
 <center>
- <h1 style="color: red;  margin-top: 50px; position: relative;">Bitmap- en vectorafbeeldingen</h1></style>
+ <h1 style="color: red;  margin-top: 50px; position: relative;">Bitmapafbeeldingen</h1></style>
 <!--h3 is een kleiner lettertype dan h2.-->
- <h3 align="center" style="color:whitesmoke;">Deze pagina is nog in onderhoud</h3>
-</style>
-</center>
+   <div class="compressie">
+      <h3 style="color: blue;">Bitmaps bestaan uit vele kleine gekleurde pixels, zoals je die ook op foto's ziet. Nadelen van Bitmapafbeeldingen zijn dat ze kwaliteit verliezen als je inzoomt/vergroot en veel ruimte gebruiken vanwege hun bestandsgrootte. Het voordeel daaraan is dat ze realistischere beelden kunnen laten zien.</h3>
+   </style>
+   </center>
+   </div>
 </body>
 <!--/html is het einde van de code-->
 </html>
