--- a/bitmap.html
+++ b/bitmap.html
@@ -40,7 +40,7 @@
  <h1 style="color: red;  margin-top: 50px; position: relative;">Bitmapafbeeldingen</h1></style>
 <!--h3 is een kleiner lettertype dan h2.-->
    <div class="compressie">
-      <h3 style="color: blue;">Bitmaps bestaan uit vele kleine gekleurde pixels, zoals je die ook op foto's ziet. Nadelen van Bitmapafbeeldingen zijn dat ze kwaliteit verliezen als je inzoomt/vergroot en veel ruimte gebruiken vanwege hun bestandsgrootte. Het voordeel daaraan is dat ze realistischere beelden kunnen laten zien.</h3>
+      <h3 style="color: red;">Bitmaps bestaan uit vele kleine gekleurde pixels, zoals je die ook op foto's ziet. Nadelen van Bitmapafbeeldingen zijn dat ze kwaliteit verliezen als je inzoomt/vergroot en veel ruimte gebruiken vanwege hun bestandsgrootte. Het voordeel daaraan is dat ze realistischere beelden kunnen laten zien.</h3>
    </style>
    </center>
    </div>
