--- a/bitmap.html
+++ b/bitmap.html
@@ -44,6 +44,14 @@
    </style>
    </center>
    </div>
+   <center>
+      <h1 style="color: red;  margin-top: 50px; position: relative;">vectorafbeeldingen</h1></style>
+     <!--h3 is een kleiner lettertype dan h2.-->
+        <div class="compressie">
+           <h3 style="color: red;">Vectormaps bestaan niet uit vele kleine gekleurde pixels, maar lijnen en vormen. Voordelen hieraan zijn dat ze scherp blijven hoe groot je ze ook maakt en ze zijn kleiner in bestandsgrootte. Maar het nadeel hieraan is dat deze Vectormapafbeeldingen niet goed werken voor foto's</h3>
+        </style>
+        </center>
+        </div>
 </body>
 <!--/html is het einde van de code-->
 </html>
