--- a/bitmap.html
+++ b/bitmap.html
@@ -52,6 +52,13 @@
         </style>
         </center>
         </div>
+        <center>
+         <div class="compressie">
+            <h1 style="color: red;">Een voorbeeld van het verschil tussen Vectormapafbeeldingen en Bitmapafbeeldingen met een cirkel als voorbeeld.</h1>
+            <img class="img_deg" src="mapafbeelding.png" alt="mapafbeelding voorbeeld" style="width:500px;height:300px;">
+         </center>
+         </div>
+         </div>
 </body>
 <!--/html is het einde van de code-->
 </html>
