--- a/bitmap.html
+++ b/bitmap.html
@@ -39,7 +39,7 @@
 <center>
  <h1 style="color: red;  margin-top: 50px; position: relative;">Bitmapafbeeldingen</h1></style>
 <!--h3 is een kleiner lettertype dan h2.-->
-   <div class="compressie">
+   <div class="map">
       <h3 style="color: red;">Bitmaps bestaan uit vele kleine gekleurde pixels, zoals je die ook op foto's ziet. Nadelen van Bitmapafbeeldingen zijn dat ze kwaliteit verliezen als je inzoomt/vergroot en veel ruimte gebruiken vanwege hun bestandsgrootte. Het voordeel daaraan is dat ze realistischere beelden kunnen laten zien.</h3>
    </style>
    </center>
@@ -47,13 +47,13 @@
    <center>
       <h1 style="color: red;  margin-top: 50px; position: relative;">vectorafbeeldingen</h1></style>
      <!--h3 is een kleiner lettertype dan h2.-->
-        <div class="compressie">
+        <div class="map">
            <h3 style="color: red;">Vectormaps bestaan niet uit vele kleine gekleurde pixels, maar lijnen en vormen. Voordelen hieraan zijn dat ze scherp blijven hoe groot je ze ook maakt en ze zijn kleiner in bestandsgrootte. Maar het nadeel hieraan is dat deze Vectormapafbeeldingen niet goed werken voor foto's</h3>
         </style>
         </center>
         </div>
         <center>
-         <div class="compressie">
+         <div class="map">
             <h1 style="color: red;">Een voorbeeld van het verschil tussen Vectormapafbeeldingen en Bitmapafbeeldingen met een cirkel als voorbeeld.</h1>
             <img class="img_deg" src="mapafbeelding.png" alt="mapafbeelding voorbeeld" style="width:500px;height:300px;">
          </center>
