--- a/Kleur.html
+++ b/Kleur.html
@@ -5,8 +5,11 @@
 </head>
 <link rel="icon" type="image/x-icon" href="Logo2.png">
 <body>
-  <link rel="stylesheet" href=opmaak.css></link>
- 
+  <link rel="stylesheet" href=opmaak.css>
+  </link>
+  <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
+  <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+  <marquee direction="right" behaviour="scroll"></marquee>
   <ul>
     <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
     <li><a align="right" href="https://sanj071.github.io">Hoofdpagina</a></li>
