--- a/compressie.html
+++ b/compressie.html
@@ -37,7 +37,7 @@
  </ul>
  <!--h1 is hoe groot de tekst is, style is de kleur en align is voor dat de tekst in het midden staat-->
 <center>
- <h1 style="color: red;  margin-top: 50px; position: relative;">Compressie</h1></style>
+ <h1 style="color: red;  margin-top: 50px; position: relative;">Compressie bij afbeeldingen en video's</h1></style>
 <!--h3 is een kleiner lettertype dan h2.-->
  <h3 align="center" style="color:whitesmoke;">Met compressie kun je bestanden zoals foto's en video's verkleinen. Er zijn 2 verschillende soorten compressies.</h3>
 </style>
@@ -66,7 +66,7 @@
  <div class="compressie">
  <center>
  <div class="compressie">
-    <h1 style="color: blue;">In Lossless compression zit het woord Lossless, wat letterlijk kostenloos betekent. Dus in tegenstelling tot Lossy compression, verlies je bij Lossless compression geen kwaliteit. Ook wordt er geen informatie verwijdert. Nog een verschil is dat bij Lossless compression het bestand altijd kan worden omgezet naar het orgineel, bij Lossy compressies kan dat niet omdat di informatie is weggegooid.. </h1>
+    <h1 style="color: blue;">In Lossless compression zit het woord Lossless, wat letterlijk kostenloos betekent. Dus in tegenstelling tot Lossy compression, verlies je bij Lossless compression geen kwaliteit. Ook wordt er geen informatie verwijdert. Nog een verschil is dat bij Lossless compression het bestand altijd kan worden omgezet naar het orgineel, bij Lossy compressies kan dat niet omdat die informatie is weggegooid.. </h1>
  </center>
  </div>
  </div>
@@ -79,6 +79,12 @@
    </center>
    </div>
    </div>
+   <center>
+      <h1 style="color: red;  margin-top: 50px; position: relative;">Compressie bij geluid</h1></style>
+      <div class="compressie">
+      <h1 style="color: blue;">Een van de bekenste compressies voor muziek is MP3. Dit is een lossy compression methode</h1>
+      <img class="img_deg" src="compressie.png" alt="compressie voorbeeld" style="width:500px;height:300px;">
+     </center>
 </body>
 <!--/html is het einde van de code-->
 </html>
