--- a/vrienden.html
+++ b/vrienden.html
@@ -57,10 +57,10 @@
    <center>
    <div class="Tamer">
    <h1>
-   <a style="color:green;" href="https://tctam.nl/">Tamer Çevik schoolsite</a>
+   <a style="color:green;" href="https://tctam.nl/">Tamer Çevik main site</a>
    </h1>
    <h1>
-      <a style="color:green;" href="https://tctam.nl/s-site/">Tamer Çevik main site</a>
+      <a style="color:green;" href="https://tctam.nl/s-site/">Tamer Çevik schoolsite</a>
       </h1>
    <h2 style="color:green;">Ik ken Tamer al sinds Havo 3. Ik ben vrienden met hem en praat soms met hem. Meestal is hij een beetje druk maar soms niet. Tamer zie je vaak met Thom en tim van Nobelen zitten.</h2>
    <br>
