--- a/compressie.html
+++ b/compressie.html
@@ -82,8 +82,7 @@
    <center>
       <h1 style="color: red;  margin-top: 50px; position: relative;">Compressie bij geluid</h1></style>
       <div class="compressie">
-      <h1 style="color: blue;">Een van de bekenste compressies voor muziek is MP3. Dit is een lossy compression methode. Het menselijk oor kan horen tot 20 khz. Dit ver</h1>
-      <img class="img_deg" src="compressie.png" alt="compressie voorbeeld" style="width:500px;height:300px;">
+      <h1 style="color: blue;">Een van de bekenste compressies voor muziek is MP3. Dit is een lossy compression methode. Het menselijk oor kan horen tot 20 khz. Dit verschilt per persoon. Bij mp3 worden tonen die hoger dan 16 kHz zijn weggelaten als er veel ander geluid tegerlijkertijd te horen is.</h1>
      </center>
 </body>
 <!--/html is het einde van de code-->
