--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 <br>
 <br>
 <br>
+<center>
 <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+</center>
 </body>
 <!--/html is het einde van de code-->
 </html>
