--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
 <br>
 <br>
 <center>
-<footer style="color: red;">Site gemaakt door Sanjay.</footer>
-</center>
+   <div class="footer">
+   <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+   </center>
+</div>
 </body>
 <!--/html is het einde van de code-->
 </html>
