--- a/hobby.html
+++ b/hobby.html
@@ -47,5 +47,10 @@
    </center>
    </div>
    </div>
+   <center>
+   <div class="footer">
+   <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+   </center>
+</div>
 </body>
 </html>
