--- a/page2.html
+++ b/page2.html
@@ -48,5 +48,10 @@
    </center>
    </div>
    </div>
+   <center>
+      <div class="footer">
+      <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+      </center>
+   </div>
 </body>
 </html>
