--- a/Kleur.html
+++ b/Kleur.html
@@ -46,6 +46,11 @@
   <center>
     <img src="RGB.jpg" alt="RGB" style="width:400px;height:400px;">
   </center>
+  <center>
+    <div class="footer">
+    <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+    </center>
+ </div>
 </body>
 
 </html>
