--- a/vrienden.html
+++ b/vrienden.html
@@ -95,5 +95,10 @@
          
       </div>
 </div>
+<center>
+   <div class="footer">
+   <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+   </center>
+</div>
 </body>
 </html>
