--- a/algemeen.html
+++ b/algemeen.html
@@ -88,5 +88,10 @@
    </center>
    </div>
    </div>
+   <center>
+      <div class="footer">
+      <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+      </center>
+   </div>
 </body>
 </html>
