--- a/bitmap.html
+++ b/bitmap.html
@@ -59,6 +59,11 @@
          </center>
          </div>
          </div>
+         <center>
+            <div class="footer">
+            <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+            </center>
+         </div>
 </body>
 <!--/html is het einde van de code-->
 </html>
