--- a/compressie.html
+++ b/compressie.html
@@ -85,6 +85,11 @@
       <h1 style="color: blue;">Een van de bekenste compressies voor muziek is MP3. Dit is een lossy compression methode. Het menselijk oor kan horen tot 20 khz. Dit verschilt per persoon. Bij mp3 worden tonen die hoger dan 16 kHz zijn weggelaten als er veel ander geluid tegerlijkertijd te horen is. Bij kwaliteit van muziek is sample rate van belang, hoeveel bits je met deze sample rate kan worden opgeslagen is ook belangrijk. Deze twee vermenigvuldigen vormt de bitrate, uitgedrukt in kilobits per seconde (kbps).
       </h1>
      </center>
+     <center>
+      <div class="footer">
+      <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+      </center>
+   </div>
 </body>
 <!--/html is het einde van de code-->
 </html>
