--- a/game.html
+++ b/game.html
@@ -32,6 +32,11 @@
    <!--Dit is een game die gaat over het Binair stelsel. -->
 <iframe align="center" src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="center" scrolling="no" ></iframe>  
    </div>
+   <center>
+      <div class="footer">
+      <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+      </center>
+   </div>
 </center>
 </body>
 </html>
