--- a/Kleur.html
+++ b/Kleur.html
@@ -48,7 +48,7 @@
   </center>
   <center>
     <div class="footer">
-    <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+    <footer style="color: red;">Site gemaakt door Sanjay Thambiaiah.</footer>
     </center>
  </div>
 </body>
