--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <br>
 <center>
    <div class="footer">
-   <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+   <footer style="color: red;">Site gemaakt door Sanjay Thambiaiah.</footer>
    </center>
 </div>
 </body>
