--- a/page2.html
+++ b/page2.html
@@ -50,7 +50,7 @@
    </div>
    <center>
       <div class="footer">
-      <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+      <footer style="color: red;">Site gemaakt door Sanjay Thambiaiah.</footer>
       </center>
    </div>
 </body>
