--- a/bitmap.html
+++ b/bitmap.html
@@ -61,7 +61,7 @@
          </div>
          <center>
             <div class="footer">
-            <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+            <footer style="color: red;">Site gemaakt door Sanjay Thambiaiah.</footer>
             </center>
          </div>
 </body>
