--- a/compressie.html
+++ b/compressie.html
@@ -87,7 +87,7 @@
      </center>
      <center>
       <div class="footer">
-      <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+      <footer style="color: red;">Site gemaakt door Sanjay Thambiaiah.</footer>
       </center>
    </div>
 </body>
