--- a/hobby.html
+++ b/hobby.html
@@ -48,9 +48,9 @@
    </div>
    </div>
    <center>
-   <div class="footer">
-   <footer style="color: red;">Site gemaakt door Sanjay.</footer>
-   </center>
-</div>
+      <div class="footer">
+      <footer style="color: red;">Site gemaakt door Sanjay Thambiaiah.</footer>
+      </center>
+   </div>
 </body>
 </html>
