--- a/vrienden.html
+++ b/vrienden.html
@@ -97,7 +97,7 @@
 </div>
 <center>
    <div class="footer">
-   <footer style="color: red;">Site gemaakt door Sanjay.</footer>
+   <footer style="color: red;">Site gemaakt door Sanjay Thambiaiah.</footer>
    </center>
 </div>
 </body>
