--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <br>
 <center>
    <div class="footer">
-   <footer style="color: red; margin-top: 50px; position: relative;">Site gemaakt door Sanjay Thambiaiah.</footer>
+   <footer style="color: red; ">Site gemaakt door Sanjay Thambiaiah.</footer>
    </center>
 </div>
 </body>
