--- a/algemeen.html
+++ b/algemeen.html
@@ -91,7 +91,7 @@
    <center>
       <div class="footer">
       <footer style="color: black;">Site gemaakt door Sanjay Thambiaiah.</footer>
-      </center>
    </div>
+   </center>d
 </body>
 </html>
