--- a/game.html
+++ b/game.html
@@ -35,7 +35,7 @@
    </center>
    <center>
       <div class="footer">
-      <footer style="color: black;">Site gemaakt door Sanjay Thambiaiah.</footer>
+      <footer style="color: red;">Site gemaakt door Sanjay Thambiaiah.</footer>
       </center>
    </div>
 </body>
