--- a/algemeen.html
+++ b/algemeen.html
@@ -90,7 +90,7 @@
    </div>
    <center>
       <div class="footer">
-      <footer style="color: black;">Site gemaakt door Sanjay Thambiaiah.</footer>
+      <footer style="color: red;">Site gemaakt door Sanjay Thambiaiah.</footer>
       </center>
    </div>
 </body>
