--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
  <div class="sport">
  <center>
  <div class="sport">
-    <h1 style="color: orange;">Ik ben zelf geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Mijn moedertaal is Tamil. Omdat ik een Sri Lankaanse achternaam heb, vind ik het altijd grappig omt te kijken of docenten mijn achternaam(en soms zelfs mijn voornaam) goed uitspreken.</h1>
+    <h1 style="color: orange;">Ik ben zelf geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Mijn moedertaal is Tamil. Omdat ik een Sri Lankaanse achternaam heb, vind ik het altijd grappig om te kijken of docenten mijn achternaam(en soms zelfs mijn voornaam) goed uitspreken.</h1>
     <img class="img_deg" src="Sri_Lanka.png" alt="school" style="width:400px;height:300px;">
  </center>
  </div>
